Fixing path in appsettings for mac

--- a/GeoLocationAPI/appsettings.Development.json
+++ b/GeoLocationAPI/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "DBSettings": {
-    "GeoLite2CityDB": ".\\GeoLite2-City.mmdb"
+    "GeoLite2CityDB": ".//GeoLite2-City.mmdb"
   }
 }
