--- a/GeoLocationAPI/appsettings.Production.json
+++ b/GeoLocationAPI/appsettings.Production.json
@@ -8,5 +8,9 @@
   },
   "DBSettings": {
     "GeoLite2CityDB": ".//GeoLite2-City.mmdb"
+  },
+  "ProxyInformation": {
+    "ProxyKnownNetwork": "172.25.0.0",
+    "ProxyKnownNetworkCIDR": 16
   }
 }
