--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,17 @@ version: '3.8'
 
 services:
   geolocationapi:
-    image: geolocationapi
     hostname: 'geolocationapi'
     build:
-      context: .
-      dockerfile: GeoLocationAPI/Dockerfile
+      context: ./GeoLocationAPI
     ports:
       - '5000'
     restart: always
 
   nginx:
-    build: ./nginx
     hostname: 'nginx'
+    build: 
+      context: ./nginx
     ports:
       - "80:80"
     depends_on:
@@ -22,3 +21,9 @@ services:
     - NGINX_PORT=80  
     - GEOLOCATIONAPI_HOST=geolocationapi
     - GEOLOCATIONAPI_PORT=5000
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/hc"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
