Add Support for aws-otel-collector / OpenTelemetry

--- a/GeoLocationAPI/appsettings.Development.json
+++ b/GeoLocationAPI/appsettings.Development.json
@@ -6,6 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "OTEL_OTLP_ENDPOINT": "http://localhost:4317",
   "DBSettings": {
     "GeoLite2CityDB": ".//GeoLite2-City.mmdb"
   },
