--- a/GeoLocationAPI/appsettings.Production.json
+++ b/GeoLocationAPI/appsettings.Production.json
@@ -6,6 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "OTEL_OTLP_ENDPOINT": "http://localhost:4317",
   "DBSettings": {
     "GeoLite2CityDB": ".//GeoLite2-City.mmdb"
   },
