--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -6,6 +6,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:5000
+      - OTEL_OTLP_ENDPOINT=http://aws-otel-collector:4317
     volumes:
       - ~/.vsdbg:/remote_debugger:rw
 
