--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,24 +6,18 @@ services:
     build:
       context: ./GeoLocationAPI
     ports:
-      - '5000'
-    restart: always
-
-  nginx:
-    hostname: 'nginx'
-    build: 
-      context: ./nginx
-    ports:
-      - "80:80"
+      - "5000:5000"
     depends_on:
-      - geolocationapi
+      - aws-otel-collector
+    restart: always
+    
+  aws-otel-collector:
+    hostname: 'aws-otel-collector'
+    build:
+      context: ./aws-otel-collector
+    command: ["--config=/etc/ecs/ecs-resource-detection.yaml", "--log-level=DEBUG"]
     environment:
-    - NGINX_PORT=80  
-    - GEOLOCATIONAPI_HOST=geolocationapi
-    - GEOLOCATIONAPI_PORT=5000
-    healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/hc"]
-      interval: 30s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+      - AWS_REGION=us-east-1
+      - AWS_PROFILE=default
+    volumes:
+      - ~/.aws:/root/.aws
