--- a/CdkGeoLocationApi/src/CdkGeoLocationApi/CdkGeoLocationApi.csproj
+++ b/CdkGeoLocationApi/src/CdkGeoLocationApi/CdkGeoLocationApi.csproj
@@ -8,17 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <!-- CDK Construct Library dependencies -->
-    <PackageReference Include="Amazon.CDK" Version="1.134.0" />
-    <PackageReference Include="Amazon.CDK.AWS.EC2" Version="1.134.0" />
-    <PackageReference Include="Amazon.CDK.AWS.ECS" Version="1.134.0" />
-    <PackageReference Include="Amazon.CDK.AWS.ElasticLoadBalancingV2" Version="1.134.0" />
-    <PackageReference Include="Amazon.CDK.AWS.IAM" Version="1.134.0" />
-    <PackageReference Include="Amazon.Jsii.Analyzers" Version="1.47.0" />
-
-    <!-- jsii Roslyn analyzers (un-comment to obtain compile-time checks for missing required props
-    <PackageReference Include="Amazon.Jsii.Analyzers" Version="*" PrivateAssets="all" />
-    -->
+    <PackageReference Include="Amazon.CDK.Lib" Version="2.10.0" />
+    <PackageReference Include="Constructs" Version="10.0.52" />
   </ItemGroup>
 
 </Project>
