--- a/GeoLocationAPI/appsettings.Development.json
+++ b/GeoLocationAPI/appsettings.Development.json
@@ -1,12 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "OTEL_OTLP_ENDPOINT": "http://localhost:4317",
+  "HealtcheckBaseURL": "http://localhost:5000/api/v1/geolocation/",
+  "HealtcheckIPToTest": "8.8.8.8",
   "DBSettings": {
     "GeoLite2CityDB": ".//GeoLite2-City.mmdb"
   },
