--- a/GeoLocationAPI/appsettings.Production.json
+++ b/GeoLocationAPI/appsettings.Production.json
@@ -2,11 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "OTEL_OTLP_ENDPOINT": "http://localhost:4317",
+  "HealtcheckBaseURL": "http://localhost:5000/api/v1/geolocation/",
+  "HealtcheckIPToTest": "8.8.8.8",
   "DBSettings": {
     "GeoLite2CityDB": ".//GeoLite2-City.mmdb"
   },
