--- a/GeoLocationAPI/appsettings.json
+++ b/GeoLocationAPI/appsettings.json
@@ -2,10 +2,9 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
-  "ServiceName":  "GeoLocationAPI"
+  "ServiceName": "GeoLocationAPI"
 }
