--- a/docker-compose-ecs-demo.yml
+++ b/docker-compose-ecs-demo.yml
@@ -9,7 +9,8 @@ services:
     environment:
         - ASPNETCORE_ENVIRONMENT=Production
         - ASPNETCORE_URLS=http://+:5000
-
+        - HealtcheckBaseURL=http://localhost:5000/api/v1/geolocation/
+        - HealtcheckIPToTest=8.8.8.8
 x-aws-cloudformation:
     Resources:
         Geolocationapi5000TargetGroup:
