--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -7,6 +7,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:5000
       - OTEL_OTLP_ENDPOINT=http://aws-otel-collector:4317
+      - HealtcheckBaseURL=http://localhost:5000/api/v1/geolocation/
+      - HealtcheckIPToTest=8.8.8.8
     volumes:
       - ~/.vsdbg:/remote_debugger:rw
 
