--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -7,4 +7,6 @@ services:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:5000
       - OTEL_OTLP_ENDPOINT=http://aws-otel-collector:4317
+      - HealtcheckBaseURL=http://localhost:5000/api/v1/geolocation/
+      - HealtcheckIPToTest=8.8.8.8
 
